演出厅管理crud
